Avoid hiding text behind footer in reserached list (#1494)
Fixes: #1381

--- a/src/evolve.less
+++ b/src/evolve.less
@@ -2831,7 +2831,7 @@ a {
         }
 
         #oldTech {
-            margin-bottom: 1rem;
+            margin-bottom: 4rem;
         }
 
         .mtab {
